Add new Activity

--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddItem">
+    tools:context=".Activities.AddItem">
 
     <ImageButton
         android:id="@+id/btnback"
@@ -264,7 +264,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Enter weight or Stock of item"
+                android:text="Enter initial Stock of item"
                 android:textSize="20dp"
                 android:layout_marginLeft="10dp"
                 />
