--- a/app/src/main/res/layout/fragment_clients_fragments.xml
+++ b/app/src/main/res/layout/fragment_clients_fragments.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".clients_fragments">
+    tools:context=".Fragments.clients_fragments">
 
     <!-- TODO: Update blank fragment layout -->
 
