--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -7,4 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".Activities.OrderActivity">
 
+<!--    TODO:: here we have make ui for -->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
