--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,31 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".Activities.MainActivity">
 <!--    page info like this is the invoice so it will show invoice on stop-->
-    <LinearLayout
-        android:id="@+id/AppbarContainer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        >
-        <TextView
-            android:id="@+id/inovice_text_page"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/invoices"
-            android:textSize="30sp"
-            android:layout_marginStart="10dp"
-            android:textStyle="bold"
-            android:textColor="@color/green"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="0dp"
-            />
 
-
-    </LinearLayout>
 <!--    fragment view for all btm pages-->
     <FrameLayout
         android:id="@+id/Container_view"
@@ -39,31 +15,47 @@
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/AppbarContainer"
-        app:layout_constraintBottom_toTopOf="@id/btmnavbar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/NewOrderbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/baseline_add_24"
-        android:backgroundTint="@color/green"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btmnavbar"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="-30dp"
-        android:contentDescription="TODO:add action to fab"
-        />
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/btmnavbar"
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/bottomNavaBarCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="10dp"
+        app:cardCornerRadius="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/btm_navbar"
-        android:background="@color/white"
-        app:itemIconTint="@color/green"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/btmnavbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            app:itemIconTint="@color/green"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+                <include
+
+                    android:id="@+id/bottomNavBarlayout"
+                    layout="@layout/bottom_navbar"
+                    style="@style/parentTop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    />
+
+        </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+    </androidx.cardview.widget.CardView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
